2007-03-01  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclCompCmds.c (TclCompileForeachCmd): Prevent an unexpected
	* tests/foreach.test (foreach-9.1):		infinite loop when the
	variable list is empty and the foreach is compiled. [Bug 1671138]

2007-02-22  Andreas Kupries  <andreask@activestate.com>

	* tests/pkg.test: Added tests for the case of an alpha package
	  satisfying a require for the regular package, demonstrating a
	  corner case specified in TIP#280. More notes in the comments to
	  the test.

2007-02-20  Don Porter  <dgp@users.sourceforge.net>

	* doc/tcltest.n:	Typo fix.  [Bug 1663539]

2007-02-19  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclIOUtil.c (Tcl_FSEvalFile): safe incr of objPtr ref.

	* unix/tcl.m4: use SHLIB_SUFFIX=".so" on HP-UX ia64 arch.
	* unix/configure: autoconf-2.13

2007-02-12  Andreas Kupries  <andreask@activestate.com>

	* generic/tclEncoding.c (EscapeFromUtfProc): Applied patch
	  supplied by Mo DeJong to fix [Bug 1516109]. Backport from Tcl
	  8.5. Mo's description: Clear the TCL_ENCODING_END flag when end
	  bytes are written. This fix keep this method from writing escape
	  bytes for an encoding like iso2022-jp multiple times when the
	  escape byte overlap with the end of the IO buffer.
	* tests/io.test: Add test case for escape byte overlap case.

2007-02-04  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in: add caching to -pipe check.
	* unix/configure: autoconf-2.13

2007-01-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in (install-private-headers): added target

2007-01-29  Don Porter  <dgp@users.sourceforge.net>

	* doc/fcopy.n:	Typo fix. [Bug 1630627]

2007-01-25  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4:       integrate CPPFLAGS into CFLAGS as late as possible
	* unix/configure.in: and move (rather than duplicate) -isysroot flags
	from CFLAGS to CPPFLAGS to avoid errors about multiple -isysroot flags
	from some older gcc builds.
